# wl-kbd-config

./: LICENSE  PKGBUILD  README.md  README.ru.md  meson.build  meson_options.txt  wl-kbd-config.desktop
doc/man1/: wl-kbd-config.1
po/: meson.build  ru.po  wl-kbd-config.pot
src/: config.h  flag_utils.vala  main.vala  settings_state_snapshot.vala  settings_window.vala  wm_config_backup.vala  wm_config_modifier.vala  wm_detector.vala
tests/: meson.build  test_config_modifier.vala  test_settings_snapshot.vala
tests/fixtures/: hyprland_before.txt  labwc_before.txt  sway_before.txt
